# pesy

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  ORIGIN.md  README.html  README.md  azure-pipelines-build-matrix.yml  azure-pipelines.yml  dune  dune-project  package.json  pesy--esy-pesy.opam  pesy.opam  prometheansacrifice--esy-pesy.opam
.ci/: build-matrix.yml  build-platform.yml  build.yaml  checksum.js  cross-release.yml  esy-build-steps.yml  test-template.yml
.ci/utils/: create-docs.yml  restore-build-cache.yml  use-cache-esy.yml  use-cache-npm.yml  use-cache-yarn.yml  use-esy.yml
assets/: dune  pesy-Test.template.re  pesy-gitignore.template  pesy-package.template.json
bootstrapper/: Pesy.re
configure/: PesyConfigure.re
docusaurus-site/: docusaurus.config.js  package.json
docusaurus-site/docs/: creating.md  introduction.md  morph.md  publishing-to-npm.md  simple-native.md  supported-config.md  templates.md
e2e-tests/: Rimraf.re  Runner.re  TestBootstrapper.re  TestNonEmptyDirBootstrapper.re  TestPesyConfigure.re  Utils.re  dune  pending-tests.re
errors/: Errors.re  dune
esy-pesy/: dune  dune-project
esy-pesy/e2e-tests/: .TestPesyConfigure.re.swp  Runner.re  TestPesyConfigure.re  Utils.re  dune
esy-pesy/lib/: EsyCommand.re  Executable.re  ImportsParser.re  JSON.re  JSON.rei  Lib.re  Parser.mly  PesyConf.rei  PesyModule.re  dune
esy.lock/: index.json
lib/: Common.re  Common.rei  DuneFile.re  DuneProject.re  DuneProject.rei  EsyCommand.re  Executable.re  Executable.rei  Lexer.mll  Lib.re  Library.re  Library.rei  Parser.mly  PesyConf.re  PesyConf.rei  PesyModule.re  Sexp.mll  Stanza.re  Stanza.rei  Stubs.re  Stubs.rei  Test.re  Test.rei  UnitTests.re  dune
notes/: checksum-verification.md  compiler-support.org  e2e.org  release.org
npm-cli/: .gitignore  .npmignore  bsconfig.json  esy.json  package-lock.json  package.json  pesy  pesy.bundle.js.minisig  pesy.js  rollup.config.js
pesy/: .gitignore  package-lock.json  package.json
scripts/: bootstrap.sh  run.bat  run.sh  simulate-latest.js  verdaccio.yaml
site/: ORIGINS.md  Refresh.js  Reload.js  index.dev.html  package-lock.json  package.json  sidebars.js
utils/: FieldTypes.re  JSON.re  JSON.rei  PesyUtils.re  UnitTests.re  Utils.re  dune
(+138 files in other folders)
