(library (name Lib) (public_name pesy--esy-pesy.lib)
    (libraries str sexplib yojson findlib
        pesy--esy-pesy.utils)) (rule (targets Lexer.ml) (deps Lexer.mll)
    (action (run %{bin:ocamllex} -q -o %{targets} %{deps}))) (rule (targets Parser.ml Parser.mli) (deps Parser.mly)
    (action (run %{bin:ocamlyacc} %{deps}))) 
