(library
 (name PesyEsyPesyLib)
 (public_name pesy--esy-pesy.lib)
 (modules (:standard))
 (libraries str findlib pesy--esy-pesy.utils
            pesy--esy-pesy.errors))

(rule
 (targets Sexp.ml)
 (deps Sexp.mll)
 (action (run %{bin:ocamllex} -q -o %{targets} %{deps})))

(rule
 (targets Lexer.ml)
 (deps Lexer.mll)
 (action (run %{bin:ocamllex} -q -o %{targets} %{deps})))

(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action (run %{bin:ocamlyacc} %{deps})))
